@startuml
namespace CommunicationMode {
    class CommunicationMode.Mode << (T, #FF7700) >>  {
    }
    interface UnknownError  {
    }
}
"__builtin__.error" *-- "extends""CommunicationMode.UnknownError"



namespace Creator {
    class Creator << (S,Aquamarine) >> {
        + SaveRepository Repository.Save
        + Dispatcher Event.Dispatcher

        + Create(host Host.Vo, port Port.Vo, stepVos []Step.Vo, communicationMode CommunicationMode.Mode, executionMode ExecutionMode.Mode) (Task.Task, error)

    }
}


"Creator.Creator""uses" o-- "Event.Dispatcher"
"Creator.Creator""uses" o-- "Repository.Save"

namespace Eraser {
    class Eraser << (S,Aquamarine) >> {
        + FindRepository Repository.Find
        + DeleteRepository Repository.Delete

        + Erase(id Task.Id) error

    }
    interface RunningTaskCantBeDeleted  {
    }
}
"__builtin__.error" *-- "extends""Eraser.RunningTaskCantBeDeleted"


"Eraser.Eraser""uses" o-- "Repository.Delete"
"Eraser.Eraser""uses" o-- "Repository.Find"

namespace Error {
    interface ManualTaskOnlyCanHave2StepsError  {
    }
    interface TaskNotFoundError  {
    }
}
"__builtin__.error" *-- "extends""Error.ManualTaskOnlyCanHave2StepsError"
"__builtin__.error" *-- "extends""Error.TaskNotFoundError"



namespace Event {
    interface TaskCreated  {
        + GetName() string
        + GetEntityId() string

    }
    interface TaskUpdated  {
        + GetName() string
        + GetEntityId() string

    }
    class taskCreated << (S,Aquamarine) >> {
        - name string
        - entityId string

        + GetName() string
        + GetEntityId() string

    }
    class taskUpdated << (S,Aquamarine) >> {
        - name string
        - entityId string

        + GetName() string
        + GetEntityId() string

    }
}

"Event.TaskCreated" <|-- "implements""Event.taskCreated"
"Event.TaskUpdated" <|-- "implements""Event.taskCreated"
"Event.TaskCreated" <|-- "implements""Event.taskUpdated"
"Event.TaskUpdated" <|-- "implements""Event.taskUpdated"


namespace ExecutionMode {
    class ExecutionMode.Mode << (T, #FF7700) >>  {
    }
    interface UnknownError  {
    }
}
"__builtin__.error" *-- "extends""ExecutionMode.UnknownError"



namespace Finder {
    class Finder << (S,Aquamarine) >> {
        + FindRepository Repository.Find

        + Find(id Task.Id) (Task.Task, error)

    }
}

"Repository.Find" <|-- "implements""Finder.Finder"

"Finder.Finder""uses" o-- "Repository.Find"

namespace Host {
    interface InvalidHostError  {
    }
    interface Vo  {
        + GetValue() string

    }
    class vo << (S,Aquamarine) >> {
        - value string

        + GetValue() string

    }
}
"__builtin__.error" *-- "extends""Host.InvalidHostError"

"Host.Vo" <|-- "implements""Host.vo"
"Port.Vo" <|-- "implements""Host.vo"


namespace Port {
    interface InvalidPortError  {
    }
    interface Vo  {
        + GetValue() string

    }
    class vo << (S,Aquamarine) >> {
        - value string

        + GetValue() string

    }
}
"__builtin__.error" *-- "extends""Port.InvalidPortError"

"Host.Vo" <|-- "implements""Port.vo"
"Port.Vo" <|-- "implements""Port.vo"


namespace Repository {
    interface Delete  {
        + Delete(id Task.Id) error

    }
    interface Find  {
        + Find(id Task.Id) (Task.Task, error)

    }
    interface FindBy  {
        + FindBy(conditions <font color=blue>interface</font>{}) ([]Task.Task, error)

    }
    interface Save  {
        + Persist(task Task.Task) 

    }
}



namespace Searcher {
    class Searcher << (S,Aquamarine) >> {
        + FindByRepository Repository.FindBy

        + Search(conditions <font color=blue>interface</font>{}) ([]Task.Task, error)

    }
}


"Searcher.Searcher""uses" o-- "Repository.FindBy"

namespace Status {
    interface Status  {
        + Value() Enum

    }
    class Status.Enum << (T, #FF7700) >>  {
    }
    interface UnknownError  {
    }
    class status << (S,Aquamarine) >> {
        - value Enum

        + Value() Enum

    }
}
"__builtin__.error" *-- "extends""Status.UnknownError"

"Status.Status" <|-- "implements""Status.status"


namespace Step {
    interface Id  {
    }
    interface InvalidSentenceLengthError  {
    }
    interface Step  {
        + GetId() Id
        + GetSentence() string

    }
    interface Vo  {
        + GetSentence() string

    }
    class id << (S,Aquamarine) >> {
        - uuid uuid.UUID

        + GetUuid() uuid.UUID
        + GetUuidString() string

    }
    class step << (S,Aquamarine) >> {
        - id Id
        - sentence string

        + GetId() Id
        + GetSentence() string

    }
    class vo << (S,Aquamarine) >> {
        - sentence string

        + GetSentence() string

    }
}
"__builtin__.error" *-- "extends""Step.InvalidSentenceLengthError"

"Step.Step" <|-- "implements""Step.step"
"Step.Vo" <|-- "implements""Step.step"
"Step.Vo" <|-- "implements""Step.vo"


namespace Task {
    interface Id  {
    }
    interface Task  {
        + GetId() Id
        + GetHost() Host.Vo
        + GetPort() Port.Vo
        + GetSteps() []Step.Step
        + GetCommunicationMode() CommunicationMode.Mode
        + GetExecutionMode() ExecutionMode.Mode
        + GetStatus() Status.Status
        + SetHost(host Host.Vo) 
        + SetPort(port Port.Vo) 
        + SetStatus(status Status.Status) 

    }
    class id << (S,Aquamarine) >> {
        - uuid uuid.UUID

        + GetUuid() uuid.UUID
        + GetUuidString() string

    }
    class task << (S,Aquamarine) >> {
        - id Id
        - host Host.Vo
        - port Port.Vo
        - steps []Step.Step
        - communicationMode CommunicationMode.Mode
        - executionMode ExecutionMode.Mode
        - status Status.Status

        + GetId() Id
        + GetHost() Host.Vo
        + SetHost(host Host.Vo) 
        + GetPort() Port.Vo
        + SetPort(port Port.Vo) 
        + GetSteps() []Step.Step
        + GetCommunicationMode() CommunicationMode.Mode
        + GetExecutionMode() ExecutionMode.Mode
        + GetStatus() Status.Status
        + SetStatus(status Status.Status) 

    }
}

"Task.Task" <|-- "implements""Task.task"


namespace Updater {
    interface TaskNotFoundError  {
    }
    class Updater << (S,Aquamarine) >> {
        + FindRepository Repository.Find
        + SaveRepository Repository.Save
        + Dispatcher Event.Dispatcher

        + Update(id Task.Id, host Host.Vo, port Port.Vo, status Status.Status) error

    }
}
"__builtin__.error" *-- "extends""Updater.TaskNotFoundError"


"Updater.Updater""uses" o-- "Event.Dispatcher"
"Updater.Updater""uses" o-- "Repository.Find"
"Updater.Updater""uses" o-- "Repository.Save"

"__builtin__.string" #.. "alias of""CommunicationMode.Mode"
"__builtin__.string" #.. "alias of""ExecutionMode.Mode"
"__builtin__.string" #.. "alias of""Status.Enum"
@enduml
